--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <a href="services" class="btn btn-special btn-xl">Services</a>
+        <%= link_to "Services", services_path, class: "btn btn-special btn-xl" %>
     </div>
 </section>
 
