team section, fixed links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,9 @@
 <footer align="center">
     <div class="col-sm-12 space-4 space-top-4 show-sm">
     <ul class="list-layout list-inline text-center h5">
-      <li><a href="#" class="link-contrast">About</a></li>
-      <li><a href="#" class="link-contrast">Careers</a></li>
-      <li><a href="#" class="link-contrast">Terms & Privacy</a></li>
+      <%= link_to "About |", about_path, class: "link-contrast" %>
+      <%= link_to "Careers", careers_path, class: "link-contrast" %>
+      <!-- <li><a href="#" class="link-contrast">Terms & Privacy</a></li> -->
     </ul>
   </div>
 </footer>
