--- a/app/views/pages/careers.html.erb
+++ b/app/views/pages/careers.html.erb
@@ -1,10 +1,9 @@
-<h1> get gud lolz jk </h1>
-
 <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>DevStack Team</h2>
-                <hr class="light">
+                <hr class="primary">
+                <p> We currently have no positions vailable. However, if you'd like to leave your resume, please e-mail us. </p>
             </div>
         </div>
     </aside>
