--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<body id="page-top">
 <header>
     <div class="header-content">
         <div class="header-content-inner">
@@ -16,7 +15,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
-                <p class="text-faded">DevStack's team of highly qualified IT experts has what it takes to get the job done quickly and professionally!</p>
+                <p class="text-faded">DevStack's team of highly qualified IT experts has what it takes to get the job done quickly and professionally!
+                </p>
 
                 <a href="mailto:your-email@your-domain.com" class="btn btn-default btn-xl">Get Started!</a>
             </div>
@@ -68,19 +68,21 @@
     </div>
 </section>
 
-<section class="no-padding" id="portfolio">
-    <div class="container-fluid">
+<section id="portfolio" class="no-padding">
+    <div class="container-fluid text-center">
+        <h2>Portfolio</h2>
+        <hr class="primary">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="http://c1.staticflickr.com/1/342/19363469504_215cecb541_h.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Website
                             </div>
                             <div class="project-name">
-                                American Hair Lines
+                                Decluca Art Gallery
                             </div>
                         </div>
                     </div>
@@ -88,11 +90,11 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="http://c1.staticflickr.com/1/302/20069240465_e465dc5eef_h.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Website
                             </div>
                             <div class="project-name">
                                 LoL Team Tracker
@@ -103,14 +105,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="http://c1.staticflickr.com/1/514/19799408719_f1762dbc6f_h.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Website
                             </div>
                             <div class="project-name">
-                                Deluca Art Gallery
+                                Devstack LLC
                             </div>
                         </div>
                     </div>
@@ -118,41 +120,11 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="http://images.dailytech.com/nimage/internet_cables_bokeh_wide.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Restaurant
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Handyman
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
+                                Setup Small Network
                             </div>
                             <div class="project-name">
                                 Experior Electric
@@ -161,51 +133,45 @@
                     </div>
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="http://c1.staticflickr.com/1/386/20209160011_1b75c882ec_b.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Website/Camera system
+                            </div>
+                            <div class="project-name">
+                                American Hair Lines
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="http://www.dpaddbags.com/blog/wp-content/uploads/2012/12/journey2-650x350.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Your Project
+                            </div>
+                            <div class="project-name">
+                                Company Name
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
 
-<section id="team">     
-    <div class="container text-center">
-        <div class="call-to-action">
-            <h2>DevStack Team</h2>
-            <hr class="primary">
-        </div>
-        <div class="row">
-        <div class="col-md-3">
-              <img class="img-rounded" src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xaf1/v/t1.0-9/945561_10200124067692647_1660086017_n.jpg?oh=65bb0d91d326d20f9b75ef72a66ee984&oe=5611A36C" alt="Generic placeholder image" width="auto" height="240">
-              <h2>Jeremy Darpinksi</h2>
-              <span class="text-muted">Founder/Lead Developer/Lead Tech</span>
-                </p>
-              <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            </div>
-            <div class="col-md-3">
-              <img class="img-rounded" src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-ash2/v/t1.0-9/734509_10151202957846691_884268426_n.jpg?oh=1951d70ead1c3066989293f11537933c&oe=56224C7D" alt="Generic placeholder image" width="auto" height="240">
-              <h2>Steph Pizzo</h2>
-              <span class="text-muted">Lead Back-End Developer</span>
-                </p>
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            </div>
-            <div class="col-md-3">
-              <img class="img-rounded" src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/11329908_10153712031396996_7102865137774900684_n.jpg?oh=4eb3375a1fedd8aa3da412e093447e8d&oe=561F1668" alt="Generic placeholder image" width="auto" height="240">
-              <h2>Sean Caulfie</h2>
-              <span class="text-muted">Project Manager/Front-End Developer</span>
-                </p>
-              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            </div>
-            <div class="col-md-3">
-              <img class="img-rounded" src="https://lh6.googleusercontent.com/-sdEHxAJUiUQ/U49H__nKtKI/AAAAAAAAABk/E2QgOMgw4GA/w378-h379-no/fb.jpg" alt="Generic placeholder image" width="auto" height="240">
-              <h2>Phil Olindo</h2>
-              <span class="text-muted">Lead Security Engineer/Tech</span>
-                </p>
-              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            </div>
-        </div><!-- /.row -->
-    </div>
-
+<section id="team">
+    <div class="container-fluid">
+    <%= render 'pages/team' %>
+</div>
 </section>
-
-
 
 <section id="contact">
     <aside class="bg-dark">
@@ -218,7 +184,7 @@
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                <p><a>123-456-6789</a></p>
+                <p><a href="tel://1-555-555-5555">(555) 555-5555</a></p>
             </div>
             <div class="col-lg-4 text-center">
                 <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
@@ -226,5 +192,5 @@
             </div>
         </div>
     </div>
-</aside>
+    </aside>
 </section>
