--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,14 +1,15 @@
 <div class="jumbotron jumbotron-special">
 </div>
+
 <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center"> 
-                <h1 class="section-heading">Devstack</h1>
-                <h2> At your service </h2>
-                <hr class="primary">
-            </div>
+    <div class="row">
+        <div class="col-lg-12 text-center"> 
+            <h1 class="section-heading">Devstack</h1>
+            <h2> At your service </h2>
+            <hr class="primary">
         </div>
     </div>
+</div>
 
 <div class="container text-center">
     <div class="row">
@@ -42,3 +43,42 @@
         </div>
     </div>
 </div>
+
+ <section id="services-details">
+        <div class="container text-center">
+          <h2>Bordered Table</h2>
+          <p>The .table-bordered class adds borders to a table:</p>            
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>IT Support</th>
+                <th>Prices</th>
+                <th>Web Services</th>
+                <th>Prices</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>john</td>
+                <td>john</td>
+              </tr>
+              <tr>
+                <td>Mary</td>
+                <td>Moe</td>
+                <td>mary</td>
+                <td>john</td>
+              </tr>
+              <tr>
+                <td>July</td>
+                <td>Dooley</td>
+                <td>july</td>
+                <td>john</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+    </section>
+
+
