--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="#">
+    <link rel="icon" href="http://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-134426.jpg">
 
     <%= stylesheet_link_tag "application", media: "all" %>
    	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
