more service changes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>Web and IT Solutions You Need. Made Simple.</h1>
-            <hr>
+            <hr class="special">
             <p>DevStack Solutions can handle all your personal or small business needs!</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
@@ -74,7 +74,7 @@
         <hr class="primary">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="http://delucart.herokuapp.com/" target="_blank" class="portfolio-box">
                     <img src="http://c1.staticflickr.com/1/342/19363469504_215cecb541_h.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -134,7 +134,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="http://americanhairlinesnj.herokuapp.com/" target="_blank" class="portfolio-box">
                     <img src="http://c1.staticflickr.com/1/386/20209160011_1b75c882ec_b.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -167,6 +167,7 @@
     </div>
 </section>
 
+<!-- comes from pages/_team -->
 <section id="team">
     <div class="container-fluid">
     <%= render 'pages/team' %>
