--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -44,25 +44,59 @@
     </div>
 </div>
 
- <section id="services-details">
-        <div class="container text-center">
-          <h2>Bordered Table</h2>
-          <p>The .table-bordered class adds borders to a table:</p>            
+ <section id="services-detailed">
+        <div class="container well">
+          <h2>Web Services</h2>
+          <p>Below are some of our common web services with general price guidelines</p>            
           <table class="table table-bordered">
             <thead>
               <tr>
-                <th>IT Support</th>
+                <th>Website Services</th>
                 <th>Prices</th>
-                <th>Web Services</th>
+                <th>Website Services</th>
                 <th>Prices</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>John</td>
-                <td>Doe</td>
+                <td>Website Creation</td>
+                <td>$1,000 and up depending on service agreement</td>
+                <td>Website Creation</td>
+                <td>$1,000</td>
+              </tr>
+              <tr>
+                <td>Mary</td>
+                <td>Moe</td>
+                <td>mary</td>
                 <td>john</td>
+              </tr>
+              <tr>
+                <td>July</td>
+                <td>Dooley</td>
+                <td>july</td>
                 <td>john</td>
+              </tr>
+            </tbody>
+          </table>
+
+    
+          <h2>IT Services</h2>
+          <p>Below are some of our common IT services with general price guidelines</p>            
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>IT Services</th>
+                <th>Prices</th>
+                <th>IT Services</th>
+                <th>Prices</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>PC Cleanup</td>
+                <td>$49</td>
+                <td>Website Creation</td>
+                <td>$1,000 and up depending on contract agreement</td>
               </tr>
               <tr>
                 <td>Mary</td>
