--- a/app/views/pages/careers.html.erb
+++ b/app/views/pages/careers.html.erb
@@ -3,7 +3,7 @@
             <div class="call-to-action">
                 <h2>DevStack Team</h2>
                 <hr class="primary">
-                <p> We currently have no positions vailable. However, if you'd like to leave your resume, please e-mail us. </p>
+                <p> We currently have no positions vailable. However, if you'd like to leave your resume, please e-mail us! </p>
             </div>
         </div>
     </aside>
