--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
+                    <h3>Tailored for you</h3>
                     <p class="text-muted">Each team member is passionate about what they do. Attention to detail and customer satisfaction are our #1 concerns!</p>
                 </div>
             </div>
