--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -17,28 +17,24 @@
             <div class="service-box">
                 <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                 <h3>Web Development</h3>
-                <p class="text-muted">Our web development team specializes in Ruby on Rails to bring your apps to life while ensuring fast turn around times. Faster turn around times, means more ndividual attention!</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
             <div class="service-box">
                 <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                 <h3>In-Home Repair</h3>
-                <p class="text-muted">PC running slow?! Have one of our certified Desktop Support technicians out to assess and repair.</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
             <div class="service-box">
                 <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                 <h3>Consulting</h3>
-                <p class="text-muted">Need help setting up your small business? Schedule a meeting with our Business Deployment consultants.</p>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
             <div class="service-box">
                 <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                <h3>Made with Love</h3>
-                <p class="text-muted">Each team member is passionate about what they do. Attention to detail and customer satisfaction are our #1 concerns!</p>
+                <h3>Tailored for you</h3>
             </div>
         </div>
     </div>
